--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,7 +18,7 @@
 	  <h3>ECS Projects</h3>
 	  <ul>
 		  <li>Typing Results</li>
-		  
+		  <img src="typing.jpeg" alt="Typing" width="450" height="250">
 		  <li>AI Project</li>
 		  <li>Coding Project</li>
 		  <li>Certifications</li>
