--- a/ecs/index.html
+++ b/ecs/index.html
@@ -23,7 +23,7 @@
 		  <li>Certifications</li>
 	  </ul>
 	  </h3>
-	 <img src="typing.jpeg" alt="Typing" width="450" height="250"> 
+	 <img src="../typing.jpeg" alt="Typing" width="450" height="250"> 
 
 	
    </div>
